[package]
name = "obex-server"
version = "0.1.0"
authors = ["David Zemon <david@zemon.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
