[package]
name = "obex-server"
version = "0.1.0"
authors = ["David Zemon <david@zemon.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
chrono = "0.4.19"
log = "0.4.14"
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json", "serve"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
simple_logger = "1.11.0"
structopt = "0.3.21"
urlencoding = "1.3.3"
walkdir = "2.3.2"
zip = "0.5.12"

[dev-dependencies]
mockall = "0.9.1"
spectral = "0.6.0"
