[package]
name = "obex-server"
version = "0.1.0"
authors = ["David Zemon <david@zemon.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
lazy_static = "1.4.0"
log = "0.4.14"
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json", "serve"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
simple_logger = "1.11.0"
structopt = "0.3.21"
